login2 no se usara

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri May 10 10:00:23 CEST 2019
-sdk.dir=C\:\\Users\\a-mon\\AppData\\Local\\Android\\Sdk
+#Fri May 10 18:09:55 CEST 2019
+sdk.dir=C\:\\Users\\Traveler\\AppData\\Local\\Android\\Sdk
