--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,17 @@ target/
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
 
+
+\.gradle/5\.1\.1/executionHistory/executionHistory\.bin
+
+\.gradle/5\.1\.1/executionHistory/executionHistory\.lock
+
+\.gradle/5\.1\.1/fileHashes/fileHashes\.bin
+
+\.gradle/5\.1\.1/fileHashes/fileHashes\.lock
+
+\.gradle/5\.1\.1/javaCompile/classAnalysis\.bin
+
+\.gradle/5\.1\.1/javaCompile/javaCompile\.lock
+
+\.gradle/buildOutputCleanup/buildOutputCleanup\.lock
