--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/CustomTheme">
+        <activity android:name=".Activities.SearchActivity"></activity>
         <activity
             android:name=".Activities.LoginActivity"
             android:label="@string/title_activity_login"
-            android:theme="@style/CustomTheme.NoActionBar"></activity>
+            android:theme="@style/CustomTheme.NoActionBar" />
         <activity
             android:name=".Activities.RegisterActivity"
             android:windowSoftInputMode="stateHidden" />
@@ -25,6 +26,7 @@
             android:theme="@style/CustomTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
