--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/CustomTheme">
-        <activity android:name=".Activities.SearchActivity"></activity>
+        android:theme="@style/CustomTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".Activities.SearchActivity" />
         <activity
             android:name=".Activities.LoginActivity"
             android:label="@string/title_activity_login"
@@ -22,7 +22,7 @@
             android:windowSoftInputMode="stateHidden" />
         <activity android:name=".Activities.Invitacion" />
         <activity
-            android:name=".Activities.SplashScreen"
+            android:name=".Activities.SplashActivity"
             android:theme="@style/CustomTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,7 +30,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.PofileActivity"/>
+        <activity android:name=".Activities.ProfileActivity" />
     </application>
 
 </manifest>
