--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/CustomTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".Activities.ChatListActivity"></activity>
         <activity android:name=".Activities.SearchActivity" />
         <activity
             android:name=".Activities.LoginActivity"
