--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/CustomTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Activities.ChatListActivity"></activity>
+        <activity android:name=".Activities.ChatListActivity" />
         <activity android:name=".Activities.SearchActivity" />
         <activity
             android:name=".Activities.LoginActivity"
@@ -32,6 +32,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activities.ProfileActivity" />
+        <activity android:name=".Activities.chatRoomActivity" />
     </application>
 
 </manifest>
